dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: myapp
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingress.class: traefik 
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-service
            port: 
              number: 80
